added link to armorate io page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
+    <div><a href="https://armorate.github.io/" class="link">mainPage</a></div>
     <article class="nomean">getting braile yorkshire and tuluka lake</article>
+    <div>
+        <p class="nomean">this ia koji LA.</p>
+    </div>
 </body>
 
 </html>
