--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-    <div><a href="https://armorate.github.io/" class="link">mainPage</a></div>
-    <article class="nomean">getting braile yorkshire and tuluka lake</article>
-    <div>
-        <p class="nomean">this ia koji LA.</p>
+    <div id="blockel"><a href="https://armorate.github.io/" class="link">mainPage</a></div>
+    <div id="inlineel">
+        <p class="nomean">koji LA.</p>
     </div>
 </body>
 
