box-sizing & display

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div id="blockel"><a href="https://armorate.github.io/" class="link">mainPage</a></div>
-    <div id="inlineel">
+    <div id="contentbox"><a href="https://armorate.github.io/" class="link">mainPage</a></div>
+    <div id="borderbox">
         <p class="nomean">koji LA.</p>
     </div>
 </body>
