--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <div id="contentbox"><a href="https://armorate.github.io/" class="link">mainPage</a></div>
+    <div id="contentbox"><a href="https://armorate.github.io/" class="link">mainPage <br> Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Vitae, quam deserunt a nostrum quod suscipit eligendi facilis nisi consectetur
+            eum omnis! Perspiciatis ad non nisi doloremque saepe illo vitae minima.</a></div>
     <div id="borderbox">
-        <p class="nomean">koji LA.</p>
+        <p class="nomean">koji LA lore.</p>
     </div>
 </body>
 
