position, relative-index

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 
 <body>
     <a href="https://armorate.github.io/" class="link">mainPage</a>
-    <div id="contentbox"></div>
-    <div id="borderbox">
+    <div id="boxes">
+        <div id="box1"></div>
+        <div id="box2"></div>
+        <div id="box3"></div>
+    </div>
+    <div id="boxes">
+        <div id="box4"></div>
+        <div id="box5"></div>
+        <div id="box6"></div>
     </div>
 </body>
 
