float and clear(outdated, flexbox is used now)

--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
 
 <body>
     <a href="https://armorate.github.io/" class="link">mainPage</a>
-    <div id="boxes">
-        <div id="box1"></div>
-        <div id="box2"></div>
-        <div id="box3"></div>
-    </div>
-    <div id="boxes">
-        <div id="box4"></div>
-        <div id="box5"></div>
-        <div id="box6"></div>
-    </div>
+    <article class="tweet">
+        <div class="avatar"></div>
+        <p class="author">tweeter</p>
+        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis magni facere officiis saepe temporibus
+            illum, cum quam possimus repudiandae nobis fuga illo enim soluta modi veritatis consequuntur voluptatibus
+            amet laborum officia id molestiae! Quibusdam!.</P>
+    </article>
 </body>
 
 </html>
