--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 
 <body>
     <a href="https://armorate.github.io/" class="link">mainPage</a>
-    <article class="tweet">
-        <div class="avatar"></div>
-        <p class="author">tweeter</p>
-        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis magni facere officiis saepe temporibus
-            illum, cum quam possimus repudiandae nobis fuga illo enim soluta modi veritatis consequuntur voluptatibus
-            amet laborum officia id molestiae! Quibusdam!.</P>
-    </article>
+    <div class="container">
+        <div class="box1">abc</div>
+        <div class="box2">bca</div>
+        <div class="box3">cba</div>
+    </div>
 </body>
 
 </html>
