--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,6 +16,7 @@
         <div class="box2">bca</div>
         <div class="box3">cba</div>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
