--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="box1">abc</div>
         <div class="box2">bca</div>
         <div class="box3">cba</div>
+        <div class="box4">cca</div>
     </div>
     <script src="index.js"></script>
 </body>
